# ai-hub-models

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-license-header.txt  .pre-commit-line-ending-check.yaml  .shellcheckrc  LICENSE  README.md  claude.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  repolint.json  requirements.txt  setup.py  test
.claude/agents/: onboarding.md
.github/ISSUE_TEMPLATE/: auto_issue_template.md  bug_report.md  compute_issue_template  compute_issue_template.md  feature_request.md  iot_issue_template.md  mobile_issue_template.md  request-new-model-on-qai-hub-models.md
.github/public_workflows/: README.md  public-gh-notify.yml  public-gh-stale.yml
.github/workflows/: public-gh-notify.yml  public-gh-stale.yml  quic-organization-repolinter.yml
ai-solutions/: Readme.md
ai-solutions/QCS8550-embedded-linux/: README.md
ai-solutions/QRB5165-embedded-linux/: README.md
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/: CMakeLists.txt  MBLLEN.cpp  MBLLEN.h  Model.h  RUAS.cpp  RUAS.h  SCI.cpp  SCI.h  StableLLVE.cpp  StableLLVE.h  ZeroDCE.cpp  ZeroDCE.h  imageEnhancement.cpp  inference.cpp  inference_helper.cpp
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/hpp/: LoadContainer.hpp  Util.hpp
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/zdl/DiagLog/: Options.h
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/zdl/DlContainer/: DlContainer.h
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/zdl/DlSystem/: DlOptional.hpp  DlVersion.hpp  IOBufferDataTypeMap.h  ITensorFactory.hpp  ITensorItr.hpp  IUserBuffer.hpp  RuntimeList.h
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/zdl/SNPE/: PSNPE.hpp  RuntimeConfigList.h  SNPEBuilder.hpp
ai-solutions/android/02-ImageEnhancement/enhancement/src/main/cpp/inc/zdl/SnpeUdo/: UdoBase.h
ai-solutions/android/05-QuestionAnswering/QuestionAnswering/bert/src/main/cpp/: CMakeLists.txt  inference.cpp  inference_helper.cpp  native-lib.cpp
ai-solutions/android/05-QuestionAnswering/QuestionAnswering/bert/src/main/cpp/inc/hpp/: CreateUserBuffer.hpp  LoadInputTensor.hpp  Util.hpp  inference.h
ai-solutions/android/05-QuestionAnswering/QuestionAnswering/bert/src/main/cpp/inc/zdl/DiagLog/: Options.hpp
ai-solutions/android/05-QuestionAnswering/QuestionAnswering/bert/src/main/cpp/inc/zdl/DlSystem/: IOBufferDataTypeMap.hpp  StringList.h  UserMemoryMap.hpp
ai-solutions/android/05-QuestionAnswering/QuestionAnswering/bert/src/main/cpp/inc/zdl/SNPE/: PSNPE.h  SNPEFactory.hpp  UserBufferList.h
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/: CMakeLists.txt
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/PAL/include/PAL/: FileOp.hpp
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/PAL/src/windows/: Common.cpp
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/QNN/HTP/core/: executable.h
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/include/: inference.h
ai-solutions/android/QNN/04-ImageSegmentation/app/src/main/cpp/src/: QnnSampleApp.cpp  imageSegmentation.cpp  inference.cpp
ai-solutions/ubuntu/gstreamer-cli/src/: CMakeLists.txt  Configuration.cpp  DecodeQueue.cpp  DetectionSnpe.cpp  ModelInference.cpp  SNPERuntime.cpp  SegmentationSnpe.cpp  StreamDecode.cpp  StreamEncode.cpp  main.cpp
docker/: Dockerfile
models-accuracy/: readme.md
models-for-solutions/: Readme.md
models-for-solutions/QNN/: Readme.md
models-for-solutions/SNPE/: Readme.md
qai_hub_models/: __init__.py  _version.py  asset_bases.yaml  conftest.py  devices_and_chipsets.yaml  global_requirements.txt  requirements-dev.txt  requirements-gpu-dev.txt  requirements.txt
qai_hub_models/configs/: _info_yaml_enums.py  _info_yaml_llm_details.py  code_gen_yaml.py  devices_and_chipsets_yaml.py  info_yaml.py  metadata_yaml.py  model_disable_reasons.py  numerics_yaml.py  perf_yaml.py  release_assets_yaml.py  tool_versions.py
qai_hub_models/datasets/: __init__.py  ade20k.py  amazon_counterfactual.py  audioset.py  bsd300.py  camouflage_dataset.py  camvid.py  carvana.py  celebahq.py  cityscapes.py  cityscapes_lowres.py  coco.py  coco91class.py  coco_face.py  coco_face_480x640.py  coco_foot_track_dataset.py  coco_panoptic_seg.py  coco_ppe.py  coco_seg.py  cocobody.py  cocobody_224x224.py  cocobody_513x257.py  cocowholebody.py  cofw.py  common.py  common_voice.py  configure_dataset.py  eg1800.py  face_attrib_dataset.py  face_attrib_enhanced_dataset.py  face_det_lite.py  facemap_3dmm_dataset.py  foot_track_dataset.py  gear_guard_dataset.py  hagrid.py  human_faces.py  human_matting.py  human_poses.py  icdar2015.py  imagenet.py  (+29 more)
qai_hub_models/evaluators/: ade_evaluator.py  audioset_evaluator.py  base_evaluators.py  camouflage_evaluator.py  centernet_detection_evaluator.py  centernet_pose_evaluator.py  classification_evaluator.py  coco_foot_track_evaluator.py  colorization_evaluator.py  depth_evaluator.py  detection_evaluator.py  face_attrib_enhanced_evaluator.py  face_attrib_evaluator.py  face_det_lite_evaluator.py  face_detection_evaluator.py  face_estimation.py  face_landmark_evaluator.py  facemap_3dmm_evaluator.py  foot_track_evaluator.py  gear_guard_evaluator.py  hrnet_evaluator.py  hrnet_face_evaluator.py  image_evaluator.py  inpaint_evaluator.py  kitti_evaluator.py  kldiv_evaluator.py  libri_speech_evaluator.py  litehrnet_evaluator.py  maskedlm_evaluator.py  mmlu_evaluator.py  movenet_evaluator.py  mpigaze_evaluator.py  mteb_classification_evaluator.py  nuscenes_bev_evaluator.py  nuscenes_evaluator.py  openpose_evaluator.py  panoptic_segmentation_evaluator.py  pose_evaluator.py  posenet_mobilenet_evaluator.py  ppe_evaluator.py  (+7 more)
qai_hub_models/labels/: camvid_labels.txt  coco_labels_91.txt  foot_track_net_labels.txt  ppe_labels.txt  voc_labels.txt
qai_hub_models/models/: common.py  conftest.py  (+1 more)
scripts/: build_and_test.py  generate_test_summary.py  retry_failed_profile_jobs.py
(+4225 files in other folders)
